Programmatically change theme color

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="dark light" name="color-scheme">
-    <!--    <meta content="#282c34" name="theme-color"/>-->
+    <meta content="dark light" name="color-scheme"/>
+    <meta content="#fffff" name="theme-color"/>
     <meta
             content="For people who like to simply LOG their life"
             name="description"
