add back code, save original meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <link href="%PUBLIC_URL%/favicon.ico" rel="icon"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta content="dark light" name="color-scheme"/>
     <meta content="#fffff" name="theme-color"/>
     <meta
